# backend/db/schema.rb
@@ -10,50 +10,23 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_06_12_160553) do
-  create_table "action_text_rich_texts", force: :cascade do |t|
-    t.string "name", null: false
-    t.text "body"
-    t.string "record_type", null: false
-    t.bigint "record_id", null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.index ["record_type", "record_id", "name"], name: "index_action_text_rich_texts_uniqueness", unique: true
-  end
-
-  create_table "active_storage_attachments", force: :cascade do |t|
-    t.string "name", null: false
-    t.string "record_type", null: false
-    t.bigint "record_id", null: false
-    t.bigint "blob_id", null: false
-    t.datetime "created_at", null: false
-    t.index ["blob_id"], name: "index_active_storage_attachments_on_blob_id"
-    t.index ["record_type", "record_id", "name", "blob_id"], name: "index_active_storage_attachments_uniqueness", unique: true
-  end
-
-  create_table "active_storage_blobs", force: :cascade do |t|
-    t.string "key", null: false
-    t.string "filename", null: false
-    t.string "content_type"
-    t.text "metadata"
-    t.string "service_name", null: false
-    t.bigint "byte_size", null: false
-    t.string "checksum"
-    t.datetime "created_at", null: false
-    t.index ["key"], name: "index_active_storage_blobs_on_key", unique: true
-  end
-
-  create_table "active_storage_variant_records", force: :cascade do |t|
-    t.bigint "blob_id", null: false
-    t.string "variation_digest", null: false
-    t.index ["blob_id", "variation_digest"], name: "index_active_storage_variant_records_uniqueness", unique: true
-  end
-
+ActiveRecord::Schema[8.0].define(version: 2025_06_12_160100) do
   create_table "companies", force: :cascade do |t|
     t.string "name"
     t.text "description"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+  end
+
+  create_table "employments", force: :cascade do |t|
+    t.integer "user_id", null: false
+    t.integer "position_id", null: false
+    t.date "start_date", null: false
+    t.date "end_date"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["position_id"], name: "index_employments_on_position_id"
+    t.index ["user_id"], name: "index_employments_on_user_id"
   end
 
   create_table "groups", force: :cascade do |t|
@@ -67,12 +40,12 @@ ActiveRecord::Schema[8.0].define(version: 2025_06_12_160553) do
   end
 
   create_table "hourly_rates", force: :cascade do |t|
-    t.integer "user_position_id", null: false
+    t.integer "employment_id", null: false
     t.integer "rate_cents"
     t.date "effective_date", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.index ["user_position_id"], name: "index_hourly_rates_on_user_position_id"
+    t.index ["employment_id"], name: "index_hourly_rates_on_employment_id"
   end
 
   create_table "positions", force: :cascade do |t|
@@ -97,27 +70,15 @@ ActiveRecord::Schema[8.0].define(version: 2025_06_12_160553) do
   end
 
   create_table "time_entries", force: :cascade do |t|
-    t.integer "user_position_id", null: false
-    t.integer "user_id", null: false
-    t.integer "minutes_worked"
+    t.integer "employment_id", null: false
+    t.datetime "start_time", null: false
+    t.datetime "end_time"
     t.text "description"
-    t.date "date"
+    t.date "date", null: false
     t.text "notes"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.index ["user_id"], name: "index_time_entries_on_user_id"
-    t.index ["user_position_id"], name: "index_time_entries_on_user_position_id"
-  end
-
-  create_table "user_positions", force: :cascade do |t|
-    t.integer "user_id", null: false
-    t.integer "position_id", null: false
-    t.date "start_date", null: false
-    t.date "end_date"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.index ["position_id"], name: "index_user_positions_on_position_id"
-    t.index ["user_id"], name: "index_user_positions_on_user_id"
+    t.index ["employment_id"], name: "index_time_entries_on_employment_id"
   end
 
   create_table "user_roles", force: :cascade do |t|
@@ -133,8 +94,8 @@ ActiveRecord::Schema[8.0].define(version: 2025_06_12_160553) do
   end
 
   create_table "users", force: :cascade do |t|
-    t.string "first_name"
-    t.string "last_name"
+    t.string "first_name", null: false
+    t.string "last_name", null: false
     t.string "username", null: false
     t.string "email"
     t.datetime "created_at", null: false
@@ -143,22 +104,17 @@ ActiveRecord::Schema[8.0].define(version: 2025_06_12_160553) do
     t.string "reset_password_token"
     t.datetime "reset_password_sent_at"
     t.datetime "remember_created_at"
-    t.string "provider"
-    t.string "uid"
     t.index ["email"], name: "index_users_on_email", unique: true
     t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
   end
 
-  add_foreign_key "active_storage_attachments", "active_storage_blobs", column: "blob_id"
-  add_foreign_key "active_storage_variant_records", "active_storage_blobs", column: "blob_id"
+  add_foreign_key "employments", "positions"
+  add_foreign_key "employments", "users"
   add_foreign_key "groups", "users"
-  add_foreign_key "hourly_rates", "user_positions"
+  add_foreign_key "hourly_rates", "employments"
   add_foreign_key "positions", "companies"
   add_foreign_key "roles", "companies"
-  add_foreign_key "time_entries", "user_positions"
-  add_foreign_key "time_entries", "users"
-  add_foreign_key "user_positions", "positions"
-  add_foreign_key "user_positions", "users"
+  add_foreign_key "time_entries", "employments"
   add_foreign_key "user_roles", "companies"
   add_foreign_key "user_roles", "roles"
   add_foreign_key "user_roles", "users"
